// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Page Empty form should render the component 1`] = `
<div
  class="flex flex-1 justify-center items-center"
>
  <div
    class="w-full max-w-xs"
  >
    <form
      class="bg-gray-300 border rounded border-gray-600 px-8 pt-6 pb-8"
    >
      <div
        class="mb-4"
      >
        <label
          class="block text-gray-700 text-sm font-bold mb-2"
          for="username"
        >
          Username
        </label>
         
        <input
          class="shadow border rounded w-full py-2 px-3 text-gray-700 focus:outline-none focus:shadow-outline"
          placeholder="Username"
          type="text"
        />
      </div>
       
      <div
        class="mb-6"
      >
        <label
          class="block text-gray-700 text-sm font-bold mb-2"
          for="password"
        >
          Password
        </label>
         
        <input
          class="shadow border rounded w-full py-2 px-3 text-gray-700 mb-3 focus:outline-none focus:shadow-outline"
          placeholder="Password"
          type="password"
        />
      </div>
       
      <div
        class="flex items-center justify-between"
      >
        <button
          class="flex-1 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline bg-gray-600 cursor-not-allowed"
          disabled="disabled"
          type="button"
        >
          Sign In
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Login Page Filled form should render the component 1`] = `
<div
  class="flex flex-1 justify-center items-center"
>
  <div
    class="w-full max-w-xs"
  >
    <form
      class="bg-gray-300 border rounded border-gray-600 px-8 pt-6 pb-8"
    >
      <div
        class="mb-4"
      >
        <label
          class="block text-gray-700 text-sm font-bold mb-2"
          for="username"
        >
          Username
        </label>
         
        <input
          class="shadow border rounded w-full py-2 px-3 text-gray-700 focus:outline-none focus:shadow-outline"
          placeholder="Username"
          type="text"
        />
      </div>
       
      <div
        class="mb-6"
      >
        <label
          class="block text-gray-700 text-sm font-bold mb-2"
          for="password"
        >
          Password
        </label>
         
        <input
          class="shadow border rounded w-full py-2 px-3 text-gray-700 mb-3 focus:outline-none focus:shadow-outline"
          placeholder="Password"
          type="password"
        />
      </div>
       
      <div
        class="flex items-center justify-between"
      >
        <button
          class="flex-1 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline bg-blue-500 hover:bg-blue-700"
          type="button"
        >
          Sign In
        </button>
      </div>
    </form>
  </div>
</div>
`;
